[package]
name = "draft-client"
version = "0.1.0"
authors = ["Pouriya Zarbafian <pouriya.zarbafian@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"